styles/Header.css
header {
    display: flex;
    justify-content: space-between;
}

#logo-box{
    display: flex;
    flex-direction: column;
}

#logo-box > a{
    max-width: 250px ;
}


#logo-subtitle h1 {
    font-size: 0.80rem;
    color:var(--clr-eucalipto);
    font-weight: 700;
}

#logo {
    max-height: 100%;
    max-width: 100%;
    display: block;
}

#top-nav a {
color: var(--clr-grey);

}

#top-nav a:hover {
    color: var(--clr-eucalipto);
    }
    


#top-nav ul{
    list-style: none;
    display: flex;
    gap: 1.5rem;
    margin: 0 0.5rem 0 0;
    padding:0;
}

.top-nav-li {
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: var(--font-M);
}

.active-link {
    font-weight: 700;
}


/* css for Navigation*/
#nav-open {
    display: none;
}
#nav-close {
    display: none;
}

@media (max-width: 60rem) {

.top-nav-li {
    font-size: var(--font-XS);
}    

}
@media (max-width: 48rem) {
    #top-nav {
        --gap: 2em;
        position: fixed;
        inset: 0 0 0 40%;
        padding: min(30vh, 10rem) 2em;
        transform: translateX(100%);
        transition: transform 350ms ease-out;
        -webkit-transform: translateX(100%);
        -webkit-transition: transform 350ms ease-out;
        background: hsl( 0 0% 0% / 0.75);
        backdrop-filter: blur(8px); 
        -webkit-backdrop-filter: blur(8px); 
        z-index: 9;
    }

    #nav-close span, #nav-open span {
        display: none;
    }

    @supports (backdrop-filter: blur(1rem)) {
        #top-nav{
            background: hsl( 0 0% 0% / 0.1);
        }
    }

    #top-nav ul {
        flex-direction: column;
    }

    #top-nav li {
        color: black;
        font-size: var(--font-L);
    }

    #top-nav[data-visible="true"] {
        transform: translateX(0%);
    }
    
    .nav-button {
        position: absolute;
        width: 2rem;
        border: 0;
        aspect-ratio: 1;
        top: 2rem;
        right: 2rem;
        z-index: 10;
    }

    #nav-open {
        background: url("./menu.svg");
        display: block;
        background-repeat: no-repeat;
    }

    #nav-close {
        background: url("./close.svg");
        background-repeat: no-repeat;
    }

    #nav-open[visible="false"], #nav-close[visible="false"] {
        display: none;
    }

    #nav-open[visible="true"], #nav-close[visible="true"] {
        display: block;
    }
}

